# zmk-conf-copy

./: build.yaml
app/: CMakeLists.txt  kconfig
app/boards/shields/keyball39/: keyball39.conf  keyball39.kconfig  keyball39.overlay
config/: jorne.conf  jorne.keymap  kconfig  kconfig.conf
